Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27536

docker: cannot run Qt Python app from Docker container or Deploy to remote host

XMLWordPrintable

    • Linux/X11

      There is a new feature: Docker container's plugin from Qt Creator.

      • Choose Docker as a build device.
      • Choose tools -> options -> Python -> Add -> executable
      • Set docker://boot2qt-raspberrypi4-64:6.4.0/usr/bin/python3 as executable

      And now I am trying to run Qt Python application from container docker://boot2qt-raspberrypi4-64:6.4.0 and receive the message ->

      ------------------------------------------------------------------------------------------------------------------------

      16:53:03: Starting docker://boot2qt-raspberrypi4-64:6.4.0/usr/bin/python3 -u /home/tatiana/Qt/untitled1/main.py...
      bash: line 1: cd: /home/tatiana/Qt/untitled1: No such file or directory
      16:53:03: docker://boot2qt-raspberrypi4-64:6.4.0/usr/bin/python3 exited with code 1

      ------------------------------------------------------------------------------------------------------------------------

      But project is placed by path: /home/tatiana/Qt/untitled1/

      +

      "/home/tatiana/Qt" mounted path for boot2qt-raspberrypi4-64:6.4.0 docker  container in device settings.

       

       

       

        1. screenshot-1.png
          357 kB
          David Schulz
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            tatiana.borisova Tatiana Borisova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes